21.3
* add widget for displaying memory (RAM) status

21.2
* add linking for systems with /usr/lib64 instead of /usr/lib
* fix issue where the app is not redrawn on size changes

21.1
* rewrite in Kotlin
* fix bug of audio widget getting stuck
* fix bug of whole status-bar crashing