@@ -1,5 +1,6 @@
 21.3
 * add widget for displaying memory (RAM) status
+* randomly hide filler widgets
 
 21.2
 * add linking for systems with /usr/lib64 instead of /usr/lib
